feat : blog alanı tamamlandı.

--- a/index.html
+++ b/index.html
@@ -351,6 +351,98 @@
                         <div class="swiper-pagination"></div>
                     </div>
                 </section>
+                <section class="blog-container">
+                    <div class="mt-5">
+                        <div class="d-flex flex-blog" style="gap: 30px;">
+                            <div class="banner-flex">
+                                <div class="banner-card">
+                                    <h5 class="header-banner-card">Multimedia</h5>
+                                    <div class="d-flex">
+                                        <p class="banner-text">Kurumsal logolarımızın ve ürün görsellerimizin tamamının
+                                            uygun formatta
+                                            indirmek için lütfen tıklayınız.</p>
+                                        <a href="#">
+                                            <img loading="lazy" width="102" height="92"
+                                                src="./assets/images/icons/icon-multimedia.svg"
+                                                alt="Nuhun Ankara Makarnası Multimedia">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="banner-card">
+                                    <h5 class="header-banner-card">Katalog</h5>
+                                    <div class="d-flex">
+                                        <p class="banner-text">Online katalogumuza ve ürünlerimiz hakkında daha fazla
+                                            bilgiye erişmek için
+                                            lütfen tıklayınız.</p>
+                                        <a href="#">
+                                            <img loading="lazy" width="102" height="92"
+                                                src="./assets/images/icons/icon-catalog.svg"
+                                                alt="Nuhun Ankara Makarnası Multimedia">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="swiper mySwiperBlog banner-card">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <img class="blog-card-swiper"
+                                                src="./assets/images/makarna-neden-sismanlatmaz.png"
+                                                alt="Nuhun Ankara Sebzeli Makarnası">
+                                            <div class="p-2 content-product-card">
+                                                <div class="d-flex flex-column" style="gap: 11.5px;">
+                                                    <span class="category-text">BLOG</span>
+                                                    <h2 class="header-blog-text">Makarna Neden Şişmanlatmaz?</h2>
+                                                </div>
+                                                <div class="border-custom-yellow"></div>
+                                                <p class="blog-text">Makarna kompleks karbonhidratlardan oluşur.
+                                                    Kompleks karbonhidratlar vücutta daha uzun sürede sindirilirler.
+                                                    Makarna, glisemik indeksi düşük bir gıdadır. Glisemik indeks,
+                                                    gıdaların kan şekerini yükseltme hızı olarak tanımlanmaktadır.
+                                                    Glisemik indeksi düşük gıdalar...
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="blog-card-swiper"
+                                                src="./assets/images/makarna-neden-sismanlatmaz.png"
+                                                alt="Nuhun Ankara Sebzeli Makarnası">
+                                            <div class="p-2 content-product-card">
+                                                <div class="d-flex flex-column" style="gap: 11.5px;">
+                                                    <span class="category-text">BLOG</span>
+                                                    <h2 class="header-blog-text">Makarna Neden Şişmanlatmaz?</h2>
+                                                </div>
+                                                <div class="border-custom-yellow"></div>
+                                                <p class="blog-text">Makarna kompleks karbonhidratlardan oluşur.
+                                                    Kompleks karbonhidratlar vücutta daha uzun sürede sindirilirler.
+                                                    Makarna, glisemik indeksi düşük bir gıdadır. Glisemik indeks,
+                                                    gıdaların kan şekerini yükseltme hızı olarak tanımlanmaktadır.
+                                                    Glisemik indeksi düşük gıdalar...
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-pagination"></div>
+                                </div>
+                            </div>
+                            <div class="video-container">
+                                <img class="youtube-cover-image" src="./assets/images/youtube-cover-image.png"
+                                    alt="Nuhun Ankara Makarnası Bakla Soslu Kaşarlı Makarna">
+                                <a class="youtube-link-href"
+                                    href="https://www.youtube.com/watch?v=qk3awLauzO4&ab_channel=Nuh%27unAnkaraMakarnas%C4%B1"
+                                    target="_blank">
+                                    <img class="youtube-icon" width="83" height="51"
+                                        src="./assets/images/icons/youtube-icon.svg"
+                                        alt="Nuhun Ankara Makarnası Yemek Tarifleri">
+                                </a>
+                                <div class="video-container-text">
+                                    <h5 class="video-player-header">Bakla Soslu Kaşarlı Makarna, Sos ile Makarnanın
+                                        Mükemmel Uyumu</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
 
 
