feat : lezzetli tarifler alanı tamamlandı.

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <div class="swiper-pagination"></div>
                     </div>
                 </section>
-                <div class="intersection">
+                <div class="intersection custom-margin">
                     <div class="d-flex row align-items-center justify-content-center intersection-gap">
                         <div class="border-custom-yellow"></div>
                         <h2 class="intersection-header">Sağlıklı Ürünler Dünyası </h2>
@@ -443,10 +443,83 @@
                         </div>
                     </div>
                 </section>
+                <div class="intersection padding-seperator">
+                    <div class="d-flex flex-column align-items-center justify-content-center about-content-gap">
+                        <h4 class="intersection-subheader">HAKKIMIZDA</h4>
+                        <h2 class="intersection-second-header">Büyük Ülkenin Büyük Markası</h2>
+                    </div>
+                    <div>
+                        <p class="about-us-text">
+                            Kadim coğrafya Anadolu’muzun dünyaya tanıttığı dünyanın en kaliteli makarnalık
+                            buğdaylarından ürettiğimiz makarnalarımızı, dünyanın dört bir yanına ulaştırıyor, ülkemizin
+                            hak ettiği ve layık olduğu kalite anlayışından asla taviz vermeden yolumuza devam ediyoruz.
+                        </p>
+                        <p class="about-us-bold">
+                            Başımız dik ve hep ileriye bakarak!
+                        </p>
+                        <div class="w-100 d-flex mt-4 align-items-center justify-content-center">
+                            <a href="#"
+                                class="btn btn-default btn-arrow-left d-row align-items-center justify-content-center">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5 9L9 5M9 5L5 1M9 5L1 5" stroke="#525252" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                NUH
+                                HAKKINDA</a>
+                        </div>
+                    </div>
+                </div>
 
-
-
-
+                <div class="intersection padding-seperator">
+                    <div class="d-flex row align-items-center justify-content-center intersection-gap">
+                        <div class="border-custom-yellow"></div>
+                        <h2 class="intersection-second-header">Lezzetli Tarifler</h2>
+                        <div class="border-custom-yellow"></div>
+                    </div>
+                    <div>
+                        <p class="content-recipes-text">
+                            Nuh'un Ankara lezzetleriyle buluşmaya hazır mısınız? İşte tüm tarifler...
+                        </p>
+                    </div>
+                    <div class="d-flex d-row recipe-flex" style="gap:30px;">
+                        <div class="recipe-card">
+                            <img src="./assets/images/cevizli-ve-semizotlu-makarna-salatasi-tarifi.png" loading="lazy"
+                                alt="Nuhun Markanası Cevizli Semizotlu Makarna Salatası Tarifi">
+                            <div class="d-flex flex-column recipe-text-padding" style="gap: 22px;">
+                                <h2 class="header-blog-text mb-0">Cevizli ve Semizotlu
+                                    Makarna Salatası</h2>
+                                <span class="text-createdDate">15.11.2021</span>
+                            </div>
+                        </div>
+                        <div class="recipe-card">
+                            <img src="./assets/images/mantar-salam-sosli-burgu-makarna-tarifi.png" loading="lazy"
+                                alt="Nuhun Markanası Cevizli Semizotlu Makarna Salatası Tarifi">
+                            <div class="d-flex flex-column recipe-text-padding" style="gap: 22px;">
+                                <h2 class="header-blog-text mb-0">Mantar, Salam ve Sosisli Burgu Makarna Lezzetleri</h2>
+                                <span class="text-createdDate">15.11.2021</span>
+                            </div>
+                        </div>
+                        <div class="recipe-card">
+                            <img src="./assets/images/irmikli-muffin-tarifi.png" loading="lazy"
+                                alt="Nuhun Markanası Cevizli Semizotlu Makarna Salatası Tarifi">
+                            <div class="d-flex flex-column recipe-text-padding" style="gap: 22px;">
+                                <h2 class="header-blog-text mb-0">İrmikli Muffin</h2>
+                                <span class="text-createdDate">15.11.2021</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-100 d-flex mt-4 align-items-center justify-content-center">
+                        <a href="#"
+                            class="btn btn-default btn-arrow-left d-row align-items-center justify-content-center">
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 9L9 5M9 5L5 1M9 5L1 5" stroke="#525252" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            TÜM TARİFLER</a>
+                    </div>
+                </div>
 
 
 
@@ -460,7 +533,6 @@
 
 
             </section>
-
 
 
 
