feat : markalarımız alanı eklendi.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </nav>
             </header>
 
-            <section class="content-wrapper">
+            <section class="wrapper-content">
                 <section class="flex-home-section">
                     <div class="background-home"></div>
                     <div class="swiper mySwiper">
@@ -279,7 +279,7 @@
                         </p>
                     </div>
                 </div>
-                <section class="product-slider-container">
+                <section class="padding-container ">
                     <div class="swiper mySwiperProduct">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -470,7 +470,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="intersection padding-seperator">
                     <div class="d-flex row align-items-center justify-content-center intersection-gap">
                         <div class="border-custom-yellow"></div>
@@ -521,18 +520,30 @@
                     </div>
                 </div>
 
-
-
-
-
-
-
-
-
+                <div class="intersection pt-2 pb-4">
+                    <div class="d-flex flex-column align-items-sm-center justify-content-center brands-container">
+                        <h4 class="intersection-subheader">HAKKIMIZDA</h4>
+                        <div class="border-custom-yellow"></div>
+                        <h2 class="intersection-header mt-1">Markalarımız</h2>
+                        <div class="d-flex flex-row our-brands">
+                            <img class="brand-image" src="./assets/images/nuhun-ankara-makarnasi.png"
+                                alt="Nuh'un Ankara Makarnasi" loading="lazy">
+                            <div class="gradient-brand"></div>
+                            <img class="brand-image" src="./assets/images/veronelli.png"
+                                alt="Nuh'un Ankara Makarnasi Veronelli" loading="lazy">
+                            <div class="gradient-brand"></div>
+                            <img class="brand-image" src="./assets/images/elif.png" alt="Nuh'un Ankara Makarnasi Elif"
+                                loading="lazy">
+                        </div>
+                    </div>
+                </div>
 
 
 
             </section>
+            <footer>
+
+            </footer>
 
 
 
