--- a/index.html
+++ b/index.html
@@ -539,15 +539,59 @@
                 </div>
 
 
-
+                <footer>
+                    <div>
+                        <h2>Site Haritası</h2>
+                        <div class="border-custom-yellow"></div>
+                        <ul>
+                            <li>
+                                <a href="#">Kurumsal</a>
+                            </li>
+                            <li>
+                                <a href="#">Ürünlerimiz</a>
+                            </li>
+                            <li>
+                                <a href="#">Makarna & Sağlık</a>
+                            </li>
+                            <li>
+                                <a href="#">İhracat</a>
+                            </li>
+                            <li>
+                                <a href="#">İletişim</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2>Hızlı Bağlantılar</h2>
+                        <div class="border-custom-yellow"></div>
+                        <ul>
+                            <li>
+                                <a href="#">Makarnanın Püf Noktaları</a>
+                            </li>
+                            <li>
+                                <a href="#">Kişisel Verilerin Korunması Kanunu</a>
+                            </li>
+                            <li>
+                                <a href="#">Nuh Grup</a>
+                            </li>
+                            <li>
+                                <a href="#">Bilgi Toplumu Hizmetleri</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2>Sosyal Medya</h2>
+                        <div class="border-custom-yellow"></div>
+                    </div>
+                    <div>
+                        <p>Bu websitesi içinde yeralan bütün görsel ve metinsel dokümanlar Nuh’un Ankara Makarnası’na
+                            aittir.
+                        </p>
+                        <span>Her hakkı saklıdır. © 2009 / 2021</span>
+                    </div>
+                    <img src="./assets/images/woohoo-digital-logo.png" alt="Woohoo Digital">
+                </footer>
             </section>
-            <footer>
-
-            </footer>
-
-
-
-
 
             <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
             <script src="./assets/scripts/app.js"></script>
