changes : görsellerin hepsi webp formatına çevirildi ve minify edildi. CSS dosyası minify hale getirildi.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <nav class="container">
                 <div class="wrapper">
                     <a href="./index.html">
-                        <img class="logo" src="./assets/images/nuhun-makarnasi-ankara-logo.png" alt="">
+                        <img class="logo" src="./assets/images/nuhun-makarnasi-ankara-logo.webp"
+                            alt="Nuhun Ankara Makarnası Logo">
                     </a>
                     <nav class="nav-links">
                         <ul>
@@ -211,7 +212,7 @@
                                 </a>
                             </div>
                             <img class="swiper-image-home" width="655" height="540" loading="eager"
-                                src="./assets/images/nuhun-ankara-makarnasindan-sebzeden-vazgecemeyenler-icin-sebzeli.png"
+                                src="./assets/images/nuhun-ankara-makarnasindan-sebzeden-vazgecemeyenler-icin-sebzeli.webp"
                                 alt="Nuh'un Ankara Markanası Sebzeli">
                         </div>
                         <div class="swiper-slide">
@@ -233,7 +234,7 @@
                                 </a>
                             </div>
                             <img class="swiper-image-home" width="655" height="540" loading="lazy"
-                                src="./assets/images/nuhun-ankara-makarnasindan-sebzeden-vazgecemeyenler-icin-sebzeli.png"
+                                src="./assets/images/nuhun-ankara-makarnasindan-sebzeden-vazgecemeyenler-icin-sebzeli.webp"
                                 alt="Nuh'un Ankara Markanası Sebzeli">
                         </div>
                         <div class="swiper-slide">
@@ -255,7 +256,7 @@
                                 </a>
                             </div>
                             <img class="swiper-image-home" width="655" height="540" loading="lazy"
-                                src="./assets/images/nuhun-ankara-makarnasindan-sebzeden-vazgecemeyenler-icin-sebzeli.png"
+                                src="./assets/images/nuhun-ankara-makarnasindan-sebzeden-vazgecemeyenler-icin-sebzeli.webp"
                                 alt="Nuh'un Ankara Markanası Sebzeli">
                         </div>
                     </div>
@@ -281,7 +282,8 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="product-card">
-                                <img class="product-image" src="./assets/images/sebzeli-makarna-nuhun-ankara.png"
+                                <img class="product-image" width="270" height="200"
+                                    src="./assets/images/sebzeli-makarna-nuhun-ankara.webp"
                                     alt="Nuhun Ankara Sebzeli Makarnası">
                                 <div class="p-2 content-product-card">
                                     <h2 class="product-header">Sebzeli Makarna</h2>
@@ -294,7 +296,8 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="product-card">
-                                <img class="product-image" src="./assets/images/sebzeli-makarna-nuhun-ankara.png"
+                                <img class="product-image" width="270" height="200"
+                                    src="./assets/images/sebzeli-makarna-nuhun-ankara.webp"
                                     alt="Nuhun Ankara Sebzeli Makarnası">
                                 <div class="p-2 content-product-card">
                                     <h2 class="product-header">Sebzeli Makarna</h2>
@@ -307,7 +310,8 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="product-card">
-                                <img class="product-image" src="./assets/images/sebzeli-makarna-nuhun-ankara.png"
+                                <img class="product-image" width="270" height="200"
+                                    src="./assets/images/sebzeli-makarna-nuhun-ankara.webp"
                                     alt="Nuhun Ankara Sebzeli Makarnası">
                                 <div class="p-2 content-product-card">
                                     <h2 class="product-header">Sebzeli Makarna</h2>
@@ -320,7 +324,8 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="product-card">
-                                <img class="product-image" src="./assets/images/sebzeli-makarna-nuhun-ankara.png"
+                                <img class="product-image" width="270" height="200"
+                                    src="./assets/images/sebzeli-makarna-nuhun-ankara.webp"
                                     alt="Nuhun Ankara Sebzeli Makarnası">
                                 <div class="p-2 content-product-card">
                                     <h2 class="product-header">Sebzeli Makarna</h2>
@@ -333,7 +338,8 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="product-card">
-                                <img class="product-image" src="./assets/images/sebzeli-makarna-nuhun-ankara.png"
+                                <img class="product-image" width="270" height="200"
+                                    src="./assets/images/sebzeli-makarna-nuhun-ankara.webp"
                                     alt="Nuhun Ankara Sebzeli Makarnası">
                                 <div class="p-2 content-product-card">
                                     <h2 class="product-header">Sebzeli Makarna</h2>
@@ -380,11 +386,11 @@
                             </div>
                         </div>
                         <div>
-                            <div class="swiper mySwiperBlog banner-card">
+                            <div class="swiper mySwiperBlog banner-cardSwiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img class="blog-card-swiper"
-                                            src="./assets/images/makarna-neden-sismanlatmaz.png"
+                                        <img class="blog-card-swiper" width="338" height="205"
+                                            src="./assets/images/makarna-neden-sismanlatmaz.webp"
                                             alt="Nuhun Ankara Sebzeli Makarnası">
                                         <div class="p-2 content-product-card">
                                             <div class="d-flex flex-column" style="gap: 11.5px;">
@@ -401,8 +407,8 @@
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img class="blog-card-swiper"
-                                            src="./assets/images/makarna-neden-sismanlatmaz.png"
+                                        <img class="blog-card-swiper" width="338" height="205"
+                                            src="./assets/images/makarna-neden-sismanlatmaz.webp"
                                             alt="Nuhun Ankara Sebzeli Makarnası">
                                         <div class="p-2 content-product-card">
                                             <div class="d-flex flex-column" style="gap: 11.5px;">
@@ -423,7 +429,8 @@
                             </div>
                         </div>
                         <div class="video-container">
-                            <img class="youtube-cover-image" src="./assets/images/youtube-cover-image.png"
+                            <img width="342" height="342" class="youtube-cover-image"
+                                src="./assets/images/youtube-cover-image.webp"
                                 alt="Nuhun Ankara Makarnası Bakla Soslu Kaşarlı Makarna">
                             <a class="youtube-link-href"
                                 href="https://www.youtube.com/watch?v=qk3awLauzO4&ab_channel=Nuh%27unAnkaraMakarnas%C4%B1"
@@ -480,7 +487,7 @@
                 </div>
                 <div class="d-flex d-row recipe-flex" style="gap:30px;">
                     <div class="recipe-card">
-                        <img src="./assets/images/cevizli-ve-semizotlu-makarna-salatasi-tarifi.png" loading="lazy"
+                        <img src="./assets/images/cevizli-ve-semizotlu-makarna-salatasi-tarifi.webp" loading="lazy"
                             alt="Nuhun Markanası Cevizli Semizotlu Makarna Salatası Tarifi">
                         <div class="d-flex flex-column recipe-text-padding" style="gap: 22px;">
                             <h2 class="header-blog-text mb-0">Cevizli ve Semizotlu
@@ -489,7 +496,7 @@
                         </div>
                     </div>
                     <div class="recipe-card">
-                        <img src="./assets/images/mantar-salam-sosli-burgu-makarna-tarifi.png" loading="lazy"
+                        <img src="./assets/images/mantar-salam-sosli-burgu-makarna-tarifi.webp" loading="lazy"
                             alt="Nuhun Markanası Cevizli Semizotlu Makarna Salatası Tarifi">
                         <div class="d-flex flex-column recipe-text-padding" style="gap: 22px;">
                             <h2 class="header-blog-text mb-0">Mantar, Salam ve Sosisli Burgu Makarna Lezzetleri</h2>
@@ -497,7 +504,7 @@
                         </div>
                     </div>
                     <div class="recipe-card">
-                        <img src="./assets/images/irmikli-muffin-tarifi.png" loading="lazy"
+                        <img src="./assets/images/irmikli-muffin-tarifi.webp" loading="lazy"
                             alt="Nuhun Markanası Cevizli Semizotlu Makarna Salatası Tarifi">
                         <div class="d-flex flex-column recipe-text-padding" style="gap: 22px;">
                             <h2 class="header-blog-text mb-0">İrmikli Muffin</h2>
@@ -521,13 +528,13 @@
                     <div class="border-custom-yellow"></div>
                     <h2 class="intersection-header mt-1">Markalarımız</h2>
                     <div class="d-flex flex-row our-brands">
-                        <img class="brand-image" src="./assets/images/nuhun-ankara-makarnasi.png"
+                        <img class="brand-image" src="./assets/images/nuhun-ankara-makarnasi.webp"
                             alt="Nuh'un Ankara Makarnasi" loading="lazy">
                         <div class="gradient-brand"></div>
-                        <img class="brand-image" src="./assets/images/veronelli.png"
+                        <img class="brand-image" src="./assets/images/veronelli.webp"
                             alt="Nuh'un Ankara Makarnasi Veronelli" loading="lazy">
                         <div class="gradient-brand"></div>
-                        <img class="brand-image" src="./assets/images/elif.png" alt="Nuh'un Ankara Makarnasi Elif"
+                        <img class="brand-image" src="./assets/images/elif.webp" alt="Nuh'un Ankara Makarnasi Elif"
                             loading="lazy">
                     </div>
                 </div>
@@ -665,10 +672,10 @@
                 </div>
             </footer>
             <div class="logo-woohoo-digital-bottom">
-                <img src="./assets/images/woohoo-digital-logo.png" alt="Woohoo Digital">
+                <img width="66" height="19" loading="lazy" src="./assets/images/woohoo-digital-logo.webp"
+                    alt="Woohoo Digital">
             </div>
         </section>
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/scripts/app.js"></script>
