fixes : mobil responsive düzenlemeler yapıldı, css dosyaları minify edildi.

--- a/index.html
+++ b/index.html
@@ -525,11 +525,12 @@
                         TÜM TARİFLER</a>
                 </div>
             </div>
-
             <div class="intersection pt-2 pb-4">
                 <div class="d-flex flex-column align-items-sm-center justify-content-center brands-container">
-                    <h4 class="intersection-subheader">HAKKIMIZDA</h4>
-                    <div class="border-custom-yellow"></div>
+                    <div class="d-flex flex-column align-items-center">
+                        <h4 class="intersection-subheader">HAKKIMIZDA</h4>
+                        <div class="border-custom-yellow"></div>
+                    </div>
                     <h2 class="intersection-header mt-1">Markalarımız</h2>
                     <div class="d-flex flex-row our-brands">
                         <img class="brand-image" src="./assets/images/nuhun-ankara-makarnasi.webp"
